# nix-ros-ardrone

./: .gitignore  .gitmodules  CMakeLists.txt  PID_values.txt  README.md  buttons_mapping.txt  command.py  flake.nix  foxglove-layouts.txt  hotasx_teleop.launch  joy.py  overlay.nix  package.nix  package.xml
config/: ekf.yaml  ekf_ardrone.yaml  ekf_old.yaml  hotasx.config.yaml  rviz_config.rviz
image-transport/: package.nix
launch/: ardrone.launch  ardrone_autonomy.launch  ardrone_double_pid.launch  ardrone_joystick_controller.launch  ardrone_pid.launch  ardrone_setup.launch  ekf.launch  orb_slam2_ardrone_localize.launch  orb_slam2_ardrone_map.launch
orb-slam2-ros/: good.patch  package.nix
scripts/: altitude_to_pose.py  ardrone_joystick_controller.py  double_pid_controller.py  launch_chromium_foxglove.sh  pid_controller.py  pos_controller.py
socket_publisher/: good.patch  package.nix
stella_vslam/: package.nix
stella_vslam_ros/: good.patch  package.nix
